# postgres-tools-mcp

./: README.md  pyproject.toml
src/: server.py
