[project]
name = "postgres-tools-mcp"
version = "0.1.0"
description = "Lightweight PostgreSQL MCP with streaming CSV export tool"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "psycopg[binary]>=3.2.0",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
